bonus working. leaks ok

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ PIPEXaminator/
 PIPEXaminator/*
 pipex-tester/
 pipex-tester/*
-
+PipexTester/
+PipexTester/*
+pipex-tester-d/
+pipex-tester-d/
 
 ## Editor
 .vscode/
